--- a/sample.env
+++ b/sample.env
@@ -7,13 +7,13 @@ BOT_NAME=𝐆𝐈𝐅𝐓𝐄𝐃-𝐌𝐃
 BOT_PIC=https://files.giftedtech.web.id/file/gifted-md.jpg
 AUTO_READ_STATUS=true
 AUTO_LIKE_STATUS=true
-AUTO_LIKE_EMOJI=💜
+AUTO_LIKE_EMOJI=🔥
 AUTO_REPLY_STATUS=false
 STATUS_REPLY_MSG=✅️ Status Viewed by Gifted-Md!
 ANTICALL=false
 ANTI_DELETE=false
 ANTICALL_MSG=*_📞 Auto Call Reject Mode Activated by Gifted-Md. 📵 No Calls Allowed Dude!_*
-MODE=public
+MODE=private
 WELCOME=false
 GOODBYE=false
 AUTO_READ_MESSAGES=false
@@ -28,7 +28,7 @@ AUTO_BIO=false
 AUTO_BIO_QUOTE=Coding is a good thing
 CHAT_BOT=false
 AUTO_BLOCK=212,98,77
-AUTO_REACT=false
+AUTO_REACT=true
 PACK_NAME=𝐆𝐈𝐅𝐓𝐄𝐃-𝐌𝐃💜
 PACK_NAME=𝐆𝐈𝐅𝐓𝐄𝐃 𝐓𝐄𝐂𝐇
 TIME_ZONE=Africa/Nairobi
